[package]
name = "password-helper"
version = "0.1.0"
edition = "2021"
description = "Utility to help memorize passwords"
authors = [ "Micah Pixton <micah@pixtons.com>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { version = "0.4", features = [ "std" ] }
rand_core = { version = "0.6", features = [ "std" ] }
clap = { version = "4.0", features = [ "derive", "cargo" ] }
rpassword = "7.2"
tokio = { version = "1", features = [ "full" ] }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls", "sqlite", "macros" ] }
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
log4rs = { version = "1.2.0", default-features = false, features = ["console_appender"] }
